--- a/templates/index.html
+++ b/templates/index.html
@@ -5,47 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepPRMS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-        }
-
-        .navbar {
-            /* Existing styles for the navbar */
-            margin-bottom: 20px;
-            /* Add margin to the bottom to create space between navbar and content */
-        }
-
-        .header-container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 150px;
-            color: #007BFF;
-            text-align: center;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            margin-top: 20px;
-            /* Add margin to the top to create space between header and navbar */
-            padding: 20px;
-        }
-
-        .header-text {
-            font-size: 40px;
-            font-weight: bold;
-            letter-spacing: 1px;
-            margin-top: 10px;
-        }
-
-        .header-subtext {
-            font-size: 25px;
-            font-weight: normal;
-            margin-top: 10px;
-        }
     </style>
 </head>
 
@@ -55,10 +16,10 @@
         </div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="dataset.html">Dataset</a></li>
-            <li><a href="help.html">Help</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../dataset.html">Dataset</a></li>
+            <li><a href="../help.html">Help</a></li>
+            <li><a href="../contact.html">Contact Us</a></li>
         </ul>
         <div class="burger" onclick="toggleNav()">
             <div class="line1"></div>
@@ -74,7 +35,7 @@
     <div class="content">
         <p>Paste or upload your protein sequences (up to 25) in FASTA format.</p>
         <p>The maximum limit for file upload is 2 Mb.</p>
-        <p><a href="tips.html">Tips</a>
+        <p><a href="../tips.html">Tips</a>
         <ul>
             <li><button onclick="loadDemoSequences()">Load demo sequences</button></li>
             <li><button onclick="clearSequences()">Clear sequences</button></li>
@@ -95,7 +56,7 @@
             <p>&copy; 2023 NIT Srinagar,J&K India.All rights reserved.</p>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
     <script>
         function handleFileSelect(event) {
             const file = event.target.files[0];
@@ -144,13 +105,22 @@ PSYGPPGVPPLYGPPMLMMPPPPAAMGPPGAPPGRDLASVPPELTASRQSFRMAMGNPSEFFVDVM`;
             const threshold = document.getElementById("thresholdSelect").value;
             const enableThreshold = document.getElementById("enableThreshold").checked;
 
+            const data = {
+                protein_sequence: proteinSequences,
+                threshold: parseFloat(threshold),
+                enableThreshold: enableThreshold
+            };
+
+            console.log("Data to send:", data);
+            //https://fazeel-jaffer.github.io/predict
+            //http://127.0.0.1:5000/predict
             // Make an API call to the backend using fetch
-            fetch('/predict', {
+            fetch('http://127.0.0.1:5000/predict', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
+                    'Content-Type': 'application/json; charset=utf-8'
                 },
-                body: `protein_sequence=${encodeURIComponent(proteinSequences)}&threshold=${threshold}&enableThreshold=${enableThreshold}`
+                body: JSON.stringify(data)
             })
                 .then(response => {
                     if (!response.ok) {
@@ -159,14 +129,14 @@ PSYGPPGVPPLYGPPMLMMPPPPAAMGPPGAPPGRDLASVPPELTASRQSFRMAMGNPSEFFVDVM`;
                     return response.json();
                 })
                 .then(data => {
-                    // Convert the data to a JSON string and encode it as a URL parameter
-                    console.log(data);
-                    const predictionResults = encodeURIComponent(JSON.stringify(data));
-
+                    console.log("Response Data:", data);
                     // Redirect to the prediction_results.html page with the prediction results as a URL parameter
+                    const predictionResults = encodeURIComponent(JSON.stringify(data));
                     window.location.href = `prediction_results.html?results=${predictionResults}`;
                 })
-                .catch(error => console.error(error));
+                .catch(error => {
+                    console.error("Error:", error.message);
+                });
         }
 
 
